--- a/src/pages/supervisor-reasignar-confirmar/supervisor-reasignar-confirmar.html
+++ b/src/pages/supervisor-reasignar-confirmar/supervisor-reasignar-confirmar.html
@@ -1,11 +1,9 @@
 <!--
-  Generated template for the UniversitarioNuevoTicketPage page.
+  Generated template for the SupervisorReasignarConfirmarPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
-
 <ion-header>
   <ion-toolbar>
     <ion-buttons left>
@@ -13,24 +11,17 @@
             <ion-icon name="menu"></ion-icon>
         </button>
     </ion-buttons>
-    <ion-title>Nuevo Ticket</ion-title>
+    <ion-title>Confirmar reasignación</ion-title>
 
   </ion-toolbar>
 </ion-header>
 
 
-
 <ion-content padding>
 
-	<div class="inputs center">
-		<span>
-			Título
-		</span>
-		<input type="text" name="titulo" placeholder="Título">
-		<span>Problema</span>
-		<textarea rows="6" cols="40"></textarea>
-		<button class="buttons bottom" (click)="GoProceso()">Enviar</button>
+	<h2>¿Desea reasignar el ticket?</h2>
+	<div class="center">
+		<button class="buttons" (click)="reasignar()">Reasignar</button>
+		<button class="buttons red" (click)="reasignar()">Regresar</button>
 	</div>
-
 </ion-content>
-
