--- a/src/pages/supervisor-reasignar/supervisor-reasignar.html
+++ b/src/pages/supervisor-reasignar/supervisor-reasignar.html
@@ -5,11 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    <ion-buttons left>
+        <button ion-button icon-only (click)="openMenu()">
+            <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
+    <ion-title>Tickets a reasignar</ion-title>
 
-  <ion-navbar>
-    <ion-title>SupervisorReasignar</ion-title>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
 
 
@@ -33,7 +37,4 @@
 
 	</ion-card>
 
-
-
-	<button class="buttons" (click)="usuarios()">Usuarios</button>
 </ion-content>
