--- a/src/pages/supervisor-tickets-reasignar/supervisor-tickets-reasignar.html
+++ b/src/pages/supervisor-tickets-reasignar/supervisor-tickets-reasignar.html
@@ -5,13 +5,16 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    <ion-buttons left>
+        <button ion-button icon-only (click)="openMenu()">
+            <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
+    <ion-title>Reasignar</ion-title>
 
-  <ion-navbar>
-    <ion-title>SupervisorTicketsReasignar</ion-title>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
-
 
 <ion-content padding>
 
