--- a/src/pages/supervisor-usuarios-confirmar/supervisor-usuarios-confirmar.html
+++ b/src/pages/supervisor-usuarios-confirmar/supervisor-usuarios-confirmar.html
@@ -5,17 +5,22 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    <ion-buttons left>
+        <button ion-button icon-only (click)="openMenu()">
+            <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
+    <ion-title>Promover</ion-title>
 
-  <ion-navbar>
-    <ion-title>SupervisorUsuariosConfirmar</ion-title>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
+
 
 
 <ion-content padding>
 	<h2>¿Desea promover al universitario?</h2>
 <button class="buttons" (click)="usuarios()">Promover</button>
-<button class="buttons" (click)="usuarios()">Regresar</button>
+<button class="buttons red" (click)="usuarios()">Regresar</button>
 
 </ion-content>
