--- a/src/pages/supervisor-usuarios/supervisor-usuarios.html
+++ b/src/pages/supervisor-usuarios/supervisor-usuarios.html
@@ -5,11 +5,15 @@
   Ionic pages and navigation.
 -->
 <ion-header>
+  <ion-toolbar>
+    <ion-buttons left>
+        <button ion-button icon-only (click)="openMenu()">
+            <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
+    <ion-title>Usuarios</ion-title>
 
-  <ion-navbar>
-    <ion-title>SupervisorUsuarios</ion-title>
-  </ion-navbar>
-
+  </ion-toolbar>
 </ion-header>
 
 
@@ -31,7 +35,6 @@
 	</ion-card>
 
 
-
-	<button class="buttons" (click)="reasignar()">Reasignar</button>
+<button class="buttons" (click)="reasignar()">Reasignar</button>
 
 </ion-content>
