--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,6 +29,7 @@
 		<button class="buttons" (click)="login()">Iniciar sesión</button>
 		<button class="buttons" (click)="login2()">Iniciar Biblio</button>
 		<button class="buttons" (click)="login3()">Iniciar Super</button>
+		<button class="buttons" (click)="login4()">Iniciar Admin</button>
 		<button class="buttons" (click)="registro()">Registrarme</button>
 	</div>
 </ion-content>
